alorithms/sort/.err
test1.c: In function 'int main()':
test1.c:5:9: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long int' [-Wformat=]
  printf("%d\n",*nums);
         ^~~~~~ ~~~~~
test1.c:6:17: error: lvalue required as increment operand
  printf("%d",*++nums);
                 ^~~~
